Добавила новый стиль для кнопки

--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,23 @@ body {
   border-left-color: #33399b;
   border-bottom-color: #33399b;
 }
+._hover03{
+  width: 72px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid rgba(86, 94, 239, 1);
+  border-radius: 4px;
+  margin-left: 36.5px;
+  background: rgba(255, 255, 255, 1);
+}
 
 ._hover03:hover {
   background-color: #33399b;
   color: #FFFFFF;
+  
 }
 ._hover03:hover a {
   color: #FFFFFF;
